# yambar

./: .gitlab-ci.yml  .woodpecker.yml  CHANGELOG.md  Justfile  PKGBUILD  README.md  config-verify.c  config-verify.h  config.c  config.h  icon.c  icon.h  main.c  meson.build  meson_options.txt  nanosvg.c  particle.c  particle.h  plugin.c  png.c  stringop.h  tag.c
.builds/: alpine-x64.yml
bar/: backend.h  bar.c  bar.h  meson.build  private.h  wayland.c  xcb.c
doc/: meson.build  yambar-modules-foreign-toplevel.5.scd  yambar-modules-mpris.5.scd  yambar-modules-pulse.5.scd  yambar-modules-sway-xkb.5.scd  yambar-modules-temp.5.scd  yambar-modules-temperature.5.scd  yambar-modules-weather.5.scd  yambar-tags.5.scd  yambar.5.scd
examples/configurations/: laptop.conf
modules/: battery.c  clock.c  cpu.c  disk-io.c  dwl.c  foreign-toplevel.c  fuzz-weather.c  i3.c  meson.build  mpris.c  network.c  niri-common.c  pipewire.c  pulse.c  removables.c  river.c  script.c  sway-xkb.c  temp.c  temperature.c  test-weather.c  tray.c  weather-parse.c  weather.c  weather.h
particles/: dynlist.c  dynlist.h  empty.c  icon.c  list.c  map.c  map.h  map.l  map.y  meson.build  progress-bar.c  ramp.c  string.c
subprojects/: basu.wrap
